974]: I cannot insert external images by dragging and droping to a nodeChanged NPE mainView==null